<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="100.0"
        android:scrollbarDefaultDelayBeforeFade="500000">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt01"
                android:text="@string/txt01"
                android:textAppearance="?android:textAppearanceMedium"
                android:gravity="right"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28.0dip"/>
            <TextView
                android:textAppearance="?android:textAppearanceMedium"
                android:gravity="right"
                android:id="@+id/txt02"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip" />

            <TextView
                android:textAppearance="?android:textAppearanceMedium"
                android:gravity="right"
                android:textColor="#ff0000ff"
                android:id="@+id/txt031"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:text="@string/txt031" />
            <TextView
                android:textAppearance="?android:textAppearanceMedium"
                android:gravity="right"
                android:id="@+id/txt041"
                android:textColor="#ff0000ff"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:text="@string/txt041" />
            <TextView

                android:id="@+id/line33"
                style="?android:attr/listSeparatorTextViewStyle"
                android:paddingTop="5dip"
                android:gravity="center_horizontal"
                android:layout_below="@+id/txt0418"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10.0dip"
                android:background="#736f6f"/>
            <TextView
                android:textAppearance="?android:textAppearanceMedium"
                android:gravity="right"
                android:id="@+id/txt06"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:text="@string/txt06" />

            <TextView
                android:id="@+id/txt07"
                android:text="@string/txt07"
                android:textAppearance="?android:textAppearanceMedium"
                android:gravity="right"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"/>
            <TextView
                android:id="@+id/txt08"
                android:text="@string/txt08"
                android:textAppearance="?android:textAppearanceMedium"
                android:gravity="right"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"/>
            <TextView
                android:id="@+id/txt09"
                android:text="@string/txt09"
                android:textAppearance="?android:textAppearanceMedium"
                android:gravity="right"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"/>
            <TextView
                android:id="@+id/txt10"
                android:text="@string/txt10"
                android:textAppearance="?android:textAppearanceMedium"
                android:gravity="right"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"/>
            <TextView
                android:id="@+id/txt11"
                android:text="@string/txt11"
                android:textAppearance="?android:textAppearanceMedium"
                android:gravity="right"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"/>
            <TextView
                android:id="@+id/txt12"
                android:text="@string/txt12"
                android:textAppearance="?android:textAppearanceMedium"
                android:gravity="right"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"/>

            <TextView
                android:id="@+id/txt13"
                android:text="@string/txt13"
                android:textAppearance="?android:textAppearanceMedium"
                android:gravity="right"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"/>
            <TextView
                android:id="@+id/txt14"
                android:text="@string/txt14"
                android:textAppearance="?android:textAppearanceMedium"
                android:gravity="right"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>